--- a/app/templates/dev/settings.html
+++ b/app/templates/dev/settings.html
@@ -3,5 +3,5 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <div id="app" class="w-100 h-100"></div>
+    <div id="app"></div>
 {% endblock %}
